syntax = "proto3";

package message.pb;

message GroupMsg {

    enum Type {
      TEXT = 0;
      AUDIO = 1;
      VIDEO = 2;
    }
  
    string id = 1;

    string group_id = 2;

    string peer_id = 3;
  
    Type type = 4;
  
    bytes payload = 5;
  
    int64 timestamp = 6;
  
    uint64 lamportime = 7;
  
    bytes signature = 10;
}