syntax = "proto3";

package network.pb;

message RoutingTable {
  string groupId = 1;
  bytes payload = 2;
}
